--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,11 @@ ul{
   display: flex;
   flex-direction: row;
 }
+
+.form{
+  border:solid 1px;
+  text-align: center;
+  margin: 2% 2% 2% 2%;
+  display: inline-block;
+  padding: 1%;
+}
