--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,12 @@ ul{
   display: inline-block;
   padding: 1%;
 }
+
+.dropDown{
+  border:solid 1px;
+  text-align: center;
+  margin: 2% 2% 2% 2%;
+  display: inline-block;
+  padding: 1%;
+
+}
