--- a/src/Components/CommodityDDC/CommodityDDC.scss
+++ b/src/Components/CommodityDDC/CommodityDDC.scss
@@ -2,6 +2,14 @@
     flex: 2;
     -webkit-box-shadow: 2px 4px 10px 1px rgba(0,0,0, 0.47);
     box-shadow: 2px 4px 10px 1px rgba(201, 201 , 201 , 0.47);
-    padding: 10px;
-   
+    margin-top: 3%;
+    h1{
+        margin-bottom:20px;
+    }
+    
+}
+
+.drop{
+    color:antiquewhite;
+    margin:100px;
 }
